--- a/page3.html
+++ b/page3.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio site templates</a></section><section class="tabs3 cid-r8kyKKhC4l" id="tabs3-i">
+<section class="engine"><a href="https://mobirise.info/d">free web maker</a></section><section class="tabs3 cid-r8kyKKhC4l" id="tabs3-i">
 
     
 
@@ -77,7 +77,7 @@
     <div class="container-fluid">
         <div class="row tabcont">
             <ul class="nav nav-tabs pt-3 mt-5" role="tablist">
-                <li class="nav-item mbr-fonts-style"><a class="nav-link active show display-7" role="tab" data-toggle="tab" href="#tabs3-i_tab0" aria-selected="true"><strong>
+                <li class="nav-item mbr-fonts-style"><a class="nav-link show active display-7" role="tab" data-toggle="tab" href="#tabs3-i_tab0" aria-selected="true"><strong>
                         OutBound Services &nbsp;and Data Services</strong></a></li>
                 <li class="nav-item mbr-fonts-style"><a class="nav-link  show active display-7" role="tab" data-toggle="tab" href="#tabs3-i_tab1" aria-selected="true"><strong>Inbound Services</strong></a></li>
                 
@@ -98,7 +98,7 @@
                                 <span class="mbr-iconfont mbri-mobile"></span>
                             </div>
                             <h4 class="mbr-element-title  align-center mbr-fonts-style pb-2 display-5">Telecom</h4>
-                            <p class="mbr-section-text  align-center mbr-fonts-style display-7"><br><br>&nbsp; Telemarketing lead management&nbsp;<br>	                 &nbsp; Product Promotion<br><br>&nbsp; Lead Generation<br><br>&nbsp;Research Surveys and Polling &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;telemarketing<br>&nbsp;Lead List<br><br>&nbsp; Customer Satisfaction<br><br>&nbsp; Decision Maker Contacts&nbsp;<br><br>&nbsp; Telephone and Web Based<br><br>&nbsp; Human Capital Management
+                            <p class="mbr-section-text  align-center mbr-fonts-style display-7"><br><br>&nbsp; Telemarketing lead management&nbsp;<br>	                 &nbsp; Product Promotion<br><br>&nbsp; Lead Generation<br><br>&nbsp;Research Surveys and<br> <br>&nbsp;Polling telemarketing<br>&nbsp;<br>&nbsp;Lead List<br><br>&nbsp; Customer Satisfaction<br><br>&nbsp; Decision Maker Contacts&nbsp;<br><br>&nbsp; Telephone and Web Based<br><br>&nbsp; Human Capital Management
 <br>
 <br>&nbsp; Data Base Management<br></p>
                         </div>
