--- a/page3.html
+++ b/page3.html
@@ -64,11 +64,12 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="tabs3 cid-r8kyKKhC4l" id="tabs3-i">
+<section class="engine"><a href="https://mobirise.info/h">create your own web page for free</a></section><section class="tabs3 cid-r8kyKKhC4l mbr-parallax-background" id="tabs3-i">
 
     
 
-    
+    <div class="mbr-overlay" style="opacity: 0; background-color: rgb(0, 0, 0);">
+    </div>
 
     <div class="container">
         <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-2"></h2>
@@ -340,6 +341,7 @@
   <script async src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script async src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script async src="assets/mbr-tabs/mbr-tabs.js"></script>
+  <script async src="assets/parallax/jarallax.min.js"></script>
   <script async src="assets/dropdown/js/nav-dropdown.js"></script>
   <script async src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script async src="assets/theme/js/script.js"></script>
